--- a/react-background-color-change/src/index.css
+++ b/react-background-color-change/src/index.css
@@ -26,3 +26,16 @@ code {
   border-radius: 2rem;
   font-weight: 700;
 }
+h1 {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding:5px;
+  text-align:center;
+  background-color: antiquewhite;
+  border-radius: 50%;
+  height: 80px;
+  width: 80px;
+  justify-content: center;
+}
